--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "deploy": "yarn build && firebase deploy"
+    "deploy": "yarn test && yarn build && firebase deploy"
   },
   "dependencies": {
     "core-js": "3.6.4",
@@ -18,9 +19,11 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.3.0",
     "@vue/cli-plugin-eslint": "4.3.0",
+    "@vue/cli-plugin-unit-jest": "~4.3.0",
     "@vue/cli-plugin-vuex": "4.3.0",
     "@vue/cli-service": "4.3.0",
     "@vue/eslint-config-prettier": "6.0.0",
+    "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "10.1.0",
     "eslint": "6.8.0",
     "eslint-plugin-prettier": "3.1.2",
